--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="content active" id="history">
               <h4>history</h4>
               <p>
-                Founded by Abbey, also known as "Bee,", our journey began with a
+                Founded by Abbey, also known as "Bee", our journey began with a
                 deep-rooted passion for cooking and a heartfelt desire to serve
                 others. Bee always knew she wanted to cook for others, so in
                 March 2018 when she courageously launched Bee's Style: Egg Rolls
