--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 Founded by Abbey, also known as "Bee", our journey began with a
                 deep-rooted passion for cooking and a heartfelt desire to serve
                 others. Bee always knew she wanted to cook for others, so in
-                March 2018 when she courageously launched Bee's Style: Egg Rolls
+                March 2018, she courageously launched Bee's Style: Egg Rolls
                 & Fried Rice.
                 <br /><br />
                 Nestled in the vibrant heart of Northwest Arkansas, specifically
